feat: 유효하지 않은 요청이 올 경우 응답 코드 400으로 처리